--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,37 +1,54 @@
 /*
-	Twenty by HTML5 UP
+	Hyperspace by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Section/Article */
+/* Type */
 
-	section > .last-child, section.last-child,
-	article > .last-child,
-	article.last-child {
-		margin-bottom: 0;
+	body, input, select, textarea {
+		color: #ffffff;
 	}
 
-/* Banner */
+/* Button */
 
-	#banner {
-		background-image: url("../../images/banner.jpg");
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: auto;
-		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+	input[type="submit"],
+	input[type="reset"],
+	input[type="button"],
+	button,
+	.button {
+		position: relative;
 	}
 
-		#banner .inner {
-			background: #341b2b;
+		input[type="submit"]:after,
+		input[type="reset"]:after,
+		input[type="button"]:after,
+		button:after,
+		.button:after {
+			display: none;
 		}
 
-/* CTA */
+/* Features */
 
-	#cta {
-		background-image: url("../../images/banner.jpg");
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: auto;
-		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+	.features {
+		border: solid 1px;
+	}
+
+/* Form */
+
+	input[type="text"],
+	input[type="password"],
+	input[type="email"],
+	input[type="tel"],
+	select,
+	textarea {
+		background: transparent;
+		border: solid 1px;
+	}
+
+/* Split */
+
+	.split.style1 > :first-child {
+		padding-right: 2em;
+		width: 70%;
 	}
