--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -4,41 +4,56 @@
 @import 'libs/skel';
 
 /*
-	Twenty by HTML5 UP
+	Hyperspace by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Section/Article */
+/* Type */
 
-	section,
-	article {
-		> .last-child,
-		&.last-child {
-			margin-bottom: 0;
+	body, input, select, textarea {
+		color: _palette(fg-bold);
+	}
+
+/* Button */
+
+	input[type="submit"],
+	input[type="reset"],
+	input[type="button"],
+	button,
+	.button {
+		position: relative;
+
+		&:after {
+			display: none;
 		}
 	}
 
-/* Banner */
+/* Features */
 
-	#banner {
-		background-image: url('../../images/banner.jpg');
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: auto;
-		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
-
-		.inner {
-			background: _palette(banner, inner-bg);
-		}
+	.features {
+		border: solid 1px;
 	}
 
-/* CTA  */
+/* Form */
 
-	#cta {
-		background-image: url('../../images/banner.jpg');
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: auto;
-		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+	input[type="text"],
+	input[type="password"],
+	input[type="email"],
+	input[type="tel"],
+	select,
+	textarea {
+		background: transparent;
+		border: solid 1px;
+	}
+
+/* Split */
+
+	.split {
+		&.style1 {
+			> :first-child {
+				padding-right: 2em;
+				width: 70%;
+			}
+		}
 	}
