--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3249,31 +3249,31 @@
 			}
 
 		.wrapper.alt {
-			background-color: #261c3e;
+			background-color;<!--#261c3e-->
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: ;<!--#5e42a6;-->
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: ;<!--#493382;-->
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: ;<!--#5052b5;-->
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: ;<!--#3e4094;-->
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: ;<!--#b74e91;-->
 		}
 
 		.wrapper.style3-alt {
-			background-color: #953d75;
+			background-color: ;<!--#953d75;-->
 		}
 
 		.wrapper.fullscreen {
