--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2563,27 +2563,27 @@
 			}
 
 				.wrapper.style1 .icon.major:before {
-					color: ;<!--#5e42a6;-->
+					color: #5e42a6;
 				}
 
 				.wrapper.style1-alt .icon.major:before {
-					color: ;<!--#493382;-->
+					color: #493382;
 				}
 
 				.wrapper.style2 .icon.major:before {
-					color: ;<!--#5052b5;-->
+					color: #5052b5;
 				}
 
 				.wrapper.style2-alt .icon.major:before {
-					color: ;<!--#3e4094;-->
+					color: #3e4094;
 				}
 
 				.wrapper.style3 .icon.major:before {
-					color: ;<!--#b74e91;-->
+					color: #b74e91;
 				}
 
 				.wrapper.style3-alt .icon.major:before {
-					color: ;<!--#953d75;-->
+					color: #953d75;
 				}
 
 /* Image */
