--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3249,7 +3249,7 @@
 			}
 
 		.wrapper.alt {
-			background-color;<!--#261c3e-->
+			background-color: ;<!--#261c3e-->
 		}
 
 		.wrapper.style1 {
