--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1699,7 +1699,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #ffffff;
+		color: #3e4094;<!--ffffff-->
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 0.5em 0;
