--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1676,7 +1676,7 @@
 		-ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		border-bottom: dotted 1px rgba(255, 255, 255, 0.35);
-		color: inherit;
+		color: #3e4094<!--inherit-->;
 		text-decoration: none;
 	}
 
