--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1622,7 +1622,7 @@
 	}
 
 	body {
-		background:;<!--#312450-->
+		background:#312450;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -1639,7 +1639,7 @@
 /* Type */
 
 	body, input, select, textarea {
-		color: #3e4094;<!--rgba(255, 255, 255, 0.55);-->
+		color:rgba(255, 255, 255, 0.55);
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16.5pt;
 		font-weight: normal;
@@ -1676,7 +1676,7 @@
 		-ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		border-bottom: dotted 1px rgba(255, 255, 255, 0.35);
-		color: #3e4094<!--inherit-->;
+		color:inherit;
 		text-decoration: none;
 	}
 
@@ -1699,7 +1699,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #3e4094;<!--ffffff-->
+		color:#ffffff;
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 0.5em 0;
@@ -2552,7 +2552,7 @@
 			display: block;
 			background: #ffffff;
 			border-radius: 100%;
-			color:;<!--#312450-->
+			color:#312450;
 			text-align: center;
 			line-height: 2.5em;
 			margin: 0 0 1.3em 0;
