--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1622,7 +1622,7 @@
 	}
 
 	body {
-		background:#312450;
+		background: #312450;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -1639,7 +1639,7 @@
 /* Type */
 
 	body, input, select, textarea {
-		color:rgba(255, 255, 255, 0.55);
+		color: rgba(255, 255, 255, 0.55);
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16.5pt;
 		font-weight: normal;
@@ -1676,7 +1676,7 @@
 		-ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		border-bottom: dotted 1px rgba(255, 255, 255, 0.35);
-		color:inherit;
+		color: inherit;
 		text-decoration: none;
 	}
 
@@ -1699,7 +1699,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color:#ffffff;
+		color: #ffffff;
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 0.5em 0;
@@ -1976,7 +1976,7 @@
 		button.special,
 		.button.special {
 			background-color: #ffffff;
-			color:  !important;<!--#312450-->
+			color: #312450 !important;
 		}
 
 			input[type="submit"].special:after,
@@ -2406,7 +2406,7 @@
 		}
 
 	select option {
-		background-color:;<!--#312450-->
+		background-color: #312450;
 		color: #ffffff;
 	}
 
@@ -2552,7 +2552,7 @@
 			display: block;
 			background: #ffffff;
 			border-radius: 100%;
-			color:#312450;
+			color: #312450;
 			text-align: center;
 			line-height: 2.5em;
 			margin: 0 0 1.3em 0;
@@ -3249,31 +3249,31 @@
 			}
 
 		.wrapper.alt {
-			background-color: ;<!--#261c3e-->
+			background-color: #261c3e;
 		}
 
 		.wrapper.style1 {
-			background-color: ;<!--#5e42a6;-->
+			background-color: #5e42a6;
 		}
 
 		.wrapper.style1-alt {
-			background-color: ;<!--#493382;-->
+			background-color: #493382;
 		}
 
 		.wrapper.style2 {
-			background-color: ;<!--#5052b5;-->
+			background-color: #5052b5;
 		}
 
 		.wrapper.style2-alt {
-			background-color: ;<!--#3e4094;-->
+			background-color: #3e4094;
 		}
 
 		.wrapper.style3 {
-			background-color: ;<!--#b74e91;-->
+			background-color: #b74e91;
 		}
 
 		.wrapper.style3-alt {
-			background-color: ;<!--#953d75;-->
+			background-color: #953d75;
 		}
 
 		.wrapper.fullscreen {
@@ -3534,7 +3534,7 @@
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background:rgb(192,192,192);<!--#312450-->
+		background: #312450;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3747,7 +3747,7 @@
 			-ms-transition: color 0.2s ease;
 			transition: color 0.2s ease;
 			border: 0;
-			color: black;<!--rgba(255, 255, 255, 0.35)-->
+			color: rgba(255, 255, 255, 0.35);
 			display: block;
 			font-size: 0.6em;
 			font-weight: bold;
@@ -3791,7 +3791,7 @@
 			}
 
 			#sidebar nav a.active {
-				color: black;<!--#ffffff;-->
+				color: #ffffff;
 			}
 
 				#sidebar nav a.active:after {
